<resources>
    <string name="app_name">StopiT</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="email_request">Request for a new password</string>
    <string name="request">Request</string>
    <string name="back">Back</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Others">Others</string>
    <string name="PrivacyPolicy">Terms and Privacy Policy</string>
    <string name="Accept">I hereby accept the</string>
    <string name="Registration">SignUp Form</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Legal Guide</string>
    <string name="menu_slideshow">Self Defense Guide</string>
    <string name="menu_tools">Share Your Story</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
