<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".SignupPage"
android:background="@drawable/bg_signinpage">
<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    >
    <TextView
        android:id="@+id/as_tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textColor="@color/field_color"
        android:layout_gravity="start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_website"
        android:text="@string/Registration"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_centerInParent="true"/>
</RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_signinpage"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <EditText
            android:id="@+id/Signup_etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:ems="15"
            android:background="@drawable/field_shape"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"

            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:layout_weight="0"
            android:hint="@string/Name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/field_shape_2"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textColor="@color/field_color"
                android:textSize="15sp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_gender_symbols"
                android:drawablePadding="10dp"/>

            <RadioGroup
                android:id="@+id/RadioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">
                <RadioButton
                    android:text="@string/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/field_color"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"/>
                <RadioButton
                    android:text="@string/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/field_color"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"/>
                <RadioButton
                    android:text="@string/Others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/field_color"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"/>
            </RadioGroup>



        </LinearLayout>

        <EditText
            android:id="@+id/Signup_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:ems="15"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"
            android:background="@drawable/field_shape"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_email_868686_24dp"
            android:drawablePadding="10dp"
            android:layout_weight="0"
            android:hint="@string/Email"/>
        <EditText
            android:id="@+id/Signup_etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:padding="10dp"
            android:ems="15"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_phone_868686_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/field_shape"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:hint="@string/Phone"/>
        <EditText
            android:id="@+id/Signup_etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:ems="15"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"
            android:background="@drawable/field_shape"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_address_black_24dp"
            android:drawablePadding="10dp"
            android:layout_weight="0"
            android:hint="@string/Address"/>
        <EditText
            android:id="@+id/Signup_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:ems="15"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_weight="0"
            android:hint="@string/Password"
            tools:ignore="TextFields"
            android:background="@drawable/field_shape"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Signup_etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:ems="15"
            android:textColorHint="@color/field_color"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_weight="0"
            android:hint="@string/ConfirmPassword"
            tools:ignore="TextFields"
            android:background="@drawable/field_shape"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <CheckBox
                android:id="@+id/Signup_cbPrivacyPolicy"
                android:text="@string/Accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrivacyPolicy"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="#0BB46A"/>
        </LinearLayout>
        <Button
            android:id="@+id/loginPage_btnLogin"
            android:text="@string/Signup"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#083b66"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:background="@drawable/btn_blue"
            android:layout_marginBottom="100dp" />

    </LinearLayout>


</ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>